trunk/Archive2/88/d24bfeb89654c9/output
main.cpp: In function 'int main()':
main.cpp:8:8: error: cannot declare pointer to 'int&'
  int &*ptr1 = ptr;   //doubt: ptr is assigned  an another alias/reference *ptr1 ? so why is this illegal
        ^
main.cpp:8:8: warning: unused variable 'ptr1' [-Wunused-variable]
